injeccion de dependencias y directorio MySQL

--- a/src/touruta_infrastructure/Touruta.Infrastructure.csproj
+++ b/src/touruta_infrastructure/Touruta.Infrastructure.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\touruta_core\Touruta.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\MySQL" />
+  </ItemGroup>
+
 </Project>
