aplicado patron repository generico y unitOfWork

--- a/src/touruta_infrastructure/Touruta.Infrastructure.csproj
+++ b/src/touruta_infrastructure/Touruta.Infrastructure.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Repositories\MySQL" />
+    <Folder Include="Repositories\SQLServer" />
   </ItemGroup>
 
 </Project>
